gccida/c2/distribute_links
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/distribute_links/src/combine.c:13126:4: error: expected ';' after expression
rtx v10; // rcx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/distribute_links/src/combine.c:13126:5: error: use of undeclared identifier 'v10'; did you mean 'v1'?
rtx v10; // rcx 
    ^~~
    v1
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/distribute_links/src/combine.c:13117:5: note: 'v1' declared here
rtx v1; // r14 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/distribute_links/src/combine.c:13139:12: error: expected ';' after expression
v1 = ( rtx)v1[1]; 
           ^
           ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/distribute_links/src/combine.c:13143:13: error: invalid operands to binary expression ('rtx' (aka 'struct rtx_def *') and 'uint64 *' (aka 'unsigned long long *'))
rtx = ( rtx)*( ( _QWORD *)rtwint + 4); 
      ~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/distribute_links/src/combine.c:13145:27: error: expected ')'
rtx = single_set_2( ( rtx)rtwint, *( ( rtx *)rtwint + 4)); 
                          ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/distribute_links/src/combine.c:13145:19: note: to match this '('
rtx = single_set_2( ( rtx)rtwint, *( ( rtx *)rtwint + 4)); 
                  ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/distribute_links/src/combine.c:13167:49: error: expected ')'
if ( ( _WORD)v7 == 34 && find_reg_fusage( ( rtx)i, USE, rtx) ) 
                                                ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/distribute_links/src/combine.c:13167:41: note: to match this '('
if ( ( _WORD)v7 == 34 && find_reg_fusage( ( rtx)i, USE, rtx) ) 
                                        ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/distribute_links/src/combine.c:13170:47: error: expected expression
if ( !reg_overlap_mentioned_p( rtx, *( ( rtx *)i + 4)) ) 
                                              ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/distribute_links/src/combine.c:13175:40: error: expected expression
if ( !reg_referenced_p( rtx, *( ( rtx *)i + 4)) ) 
                                       ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/distribute_links/src/combine.c:13184:1: error: use of undeclared identifier 'v10'
v10 = added_links_insn; 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/distribute_links/src/combine.c:13190:20: error: use of undeclared identifier 'v10'
while ( *( _WORD *)v10 == 32 && **( _WORD **)&v10[2] == 48 ) 
                   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/distribute_links/src/combine.c:13190:47: error: use of undeclared identifier 'v10'; did you mean 'v1'?
while ( *( _WORD *)v10 == 32 && **( _WORD **)&v10[2] == 48 ) 
                                              ^~~
                                              v1
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/distribute_links/src/combine.c:13117:5: note: 'v1' declared here
rtx v1; // r14 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/distribute_links/src/combine.c:13192:1: error: use of undeclared identifier 'v10'
v10 = v10[1].fld[0].rtx; 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/distribute_links/src/combine.c:13192:7: error: use of undeclared identifier 'v10'; did you mean 'v1'?
v10 = v10[1].fld[0].rtx; 
      ^~~
      v1
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/distribute_links/src/combine.c:13117:5: note: 'v1' declared here
rtx v1; // r14 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/distribute_links/src/combine.c:13193:9: error: use of undeclared identifier 'v10'; did you mean 'v1'?
rtint = v10->fld[0].rtint; 
        ^~~
        v1
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/distribute_links/src/combine.c:13117:5: note: 'v1' declared here
rtx v1; // r14 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/distribute_links/src/combine.c:13219:26: error: expected ';' after expression
added_links_insn = ( rtx)i; 
                         ^
                         ;
15 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/distribute_links/src/obj/combine.o] Error 1
